[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/ConsumeSubMenu.gd" type="Script" id=1]

[node name="ConsumeSubMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel2" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2/HBoxContainer"]
margin_left = 343.0
margin_right = 421.0
margin_bottom = 580.0
alignment = 1

[node name="Label" type="Label" parent="Panel2/HBoxContainer/VBoxContainer"]
margin_top = 274.0
margin_right = 78.0
margin_bottom = 288.0
text = "Current soul"

[node name="PreSoul" type="Label" parent="Panel2/HBoxContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 78.0
margin_bottom = 306.0

[node name="Plus" type="Label" parent="Panel2/HBoxContainer"]
margin_left = 425.0
margin_top = 283.0
margin_right = 441.0
margin_bottom = 297.0
text = " + "

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel2/HBoxContainer"]
margin_left = 445.0
margin_right = 547.0
margin_bottom = 580.0
alignment = 1

[node name="Label" type="Label" parent="Panel2/HBoxContainer/VBoxContainer2"]
margin_top = 274.0
margin_right = 102.0
margin_bottom = 288.0
text = "Consuming soul"

[node name="NewSoul" type="Label" parent="Panel2/HBoxContainer/VBoxContainer2"]
margin_top = 292.0
margin_right = 102.0
margin_bottom = 306.0

[node name="Equals" type="Label" parent="Panel2/HBoxContainer"]
margin_left = 551.0
margin_top = 283.0
margin_right = 567.0
margin_bottom = 297.0
text = " = "

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel2/HBoxContainer"]
margin_left = 571.0
margin_right = 661.0
margin_bottom = 580.0
alignment = 1

[node name="Label" type="Label" parent="Panel2/HBoxContainer/VBoxContainer3"]
margin_top = 274.0
margin_right = 90.0
margin_bottom = 288.0
text = "Resulting soul"

[node name="MergedSoul" type="Label" parent="Panel2/HBoxContainer/VBoxContainer3"]
margin_top = 292.0
margin_right = 90.0
margin_bottom = 306.0
